--- a/next_mart/package.json
+++ b/next_mart/package.json
@@ -15,8 +15,10 @@
     "clsx": "^2.1.1",
     "create": "^0.5.5",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.34.0",
     "input": "^1.0.1",
     "lucide-react": "^0.564.0",
+    "motion": "^12.34.0",
     "next": "16.1.6",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
